---------------------------------
Change Log
---------------------------------

Version 1.5
-----------
- Scene buttons now give feedback when pressed.
- Switches for http/https and remote/local network
- Changed name of default folder
- ISY portal is the default remote connection
- Added About page with version 
- Fixed issue where button tracking wasn't working for some ISY devices.