@@ -1,0 +1,7 @@
+"#addDeviceListView" : {
+	top: '5%'
+}
+
+"#addDeviceListView[platform=ios]" : {
+	top: '10%'
+}
